<resources>
    <string name="app_name">ChatApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone Number</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Create a new account</string>
    <string name="enter_code">Enter the code sent to your phone number here.</string>
    <string name="verify_code">Verification Code</string>
    <string name="receive_code">Didn\'t receive any code?</string>
    <string name="resend">Resend</string>
    <string name="start">Start</string>
    <string name="_000000">000000</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="message">Message</string>
    <string name="contact_name">Contact Name</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="account_info">Change phone number</string>
    <string name="notification">Notification</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_surname">Please enter your surname</string>
    <string name="enter_number">Please enter your new phone number</string>
    <string name="notification_info">Message sounds</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="upload_photo">Upload Photo</string>
</resources>