<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="fragmentCode"
            type="com.fleaudie.chatapp.view.CodeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_pink">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/verify_code"
            android:textColor="@color/system_bar"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/light_pink"
            android:onClick="@{()-> fragmentCode.start()}"
            android:text="@string/start"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextVerifyCode"
            app:layout_constraintStart_toStartOf="@+id/editTextVerifyCode"
            app:layout_constraintTop_toBottomOf="@+id/editTextVerifyCode"
            app:strokeColor="@color/text_color"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/enter_code"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextVerifyCode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/text_bg"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/_000000"
            android:inputType="number"
            android:letterSpacing="2"
            android:maxLength="6"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>