<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragmentSignIn"
            type="com.fleaudie.chatapp.view.SignInFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/sign_in"
            android:textColor="@color/text_color"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/countyCodePicker"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/text_bg_left"
            android:paddingTop="5dp"
            app:ccpDialog_fastScroller_bubbleColor="@color/text_color"
            app:ccpDialog_fastScroller_handleColor="@color/text_color"
            app:ccpDialog_textColor="@color/text_color"
            app:ccp_arrowColor="@color/text_color"
            app:ccp_contentColor="@color/text_color"
            app:ccp_defaultNameCode="TR"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
            app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextPhone" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:background="@drawable/txt_bg_right"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countyCodePicker"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/background"
            android:text="@string/sign_in"
            android:onClick="@{() -> fragmentSignIn.signIn()}"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="@+id/countyCodePicker"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            app:strokeColor="@color/text_color"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_account"
            android:textColor="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>