<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userProfileObject"
            type="com.fleaudie.chatapp.view.UserProfileFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_bar"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewProfile" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:onClick="@{()-> userProfileObject.changeNumber()}">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageViewAccount"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="25dp"
                            app:layout_constraintBottom_toBottomOf="@+id/textViewAccountInfo"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textViewAccount"
                            app:srcCompat="@drawable/account_icon" />

                        <TextView
                            android:id="@+id/textViewAccount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="25dp"
                            android:text="@string/account"
                            android:textColor="@color/text_color"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageViewAccount"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewAccountInfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/account_info"
                            android:textColor="@color/text_color"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/textViewAccount"
                            app:layout_constraintStart_toStartOf="@+id/textViewAccount"
                            app:layout_constraintTop_toBottomOf="@+id/textViewAccount" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> userProfileObject.profileSettings()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgUserPhoto"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/empty_profile_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="17dp"
                            android:text="TextView"
                            android:textColor="@color/text_color"
                            android:textSize="16sp"
                            app:layout_constraintStart_toEndOf="@+id/imgUserPhoto"
                            app:layout_constraintTop_toTopOf="@+id/imgUserPhoto" />

                        <TextView
                            android:id="@+id/txtUserNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginBottom="17dp"
                            android:text="TextView"
                            android:textColor="@color/text_color"
                            app:layout_constraintBottom_toBottomOf="@+id/imgUserPhoto"
                            app:layout_constraintStart_toEndOf="@+id/imgUserPhoto" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnLogOut"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="120dp"
                    android:backgroundTint="@color/button_pink"
                    android:onClick="@{() -> userProfileObject.signOut()}"
                    android:text="@string/log_out"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewAccount" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>